[package]
name = "pack"
version = "0.1.0"
edition = "2021"
authors = ["George Agriogiannis <george.agriogiannis2@suse.com>"]
description = "Path Archiver Collection Kit"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive", "env"] }
flate2 = "1.0"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.0"
